# kafka-python

./: CHANGELOG.md  README.md  pyproject.toml  release.config.js
.github/workflows/: ci.yaml
src/kafka/: __init__.py  consumer.py  container.py  producer.py
src/omnixys_kafka/: __init__.py  consumer.py  container.py  model.py  producer.py  serializer.py
tests/: test_import.py
